# TeacherAwareAL

./: .gitignore  README.md
caal/: attributelearning.py
catkin_ws/src/control_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
catkin_ws/src/control_gui/resources/: control_gui.ui
catkin_ws/src/control_gui/src/control_gui/: control_gui.py
catkin_ws/src/learner/: CMakeLists.txt  package.xml  plugin.xml  setup.py
catkin_ws/src/learner/resources/: learner.ui
catkin_ws/src/learner/src/learner/: learner.py
catkin_ws/src/nao_interface/: CMakeLists.txt  package.xml
catkin_ws/src/nao_interface/config/: nao_utterances.yaml
catkin_ws/src/nao_interface/scripts/: nao_interface.py  test_naoqi.py
catkin_ws/src/support/: CMakeLists.txt  package.xml
catkin_ws/src/support/config/: experiment_develop.yaml  experiment_pilot.yaml  logging_develop.yaml  logging_experiment.yaml
catkin_ws/src/support/launch/: development.launch  experiment.launch
catkin_ws/src/support/msg/: ExperimentTrigger.msg
catkin_ws/src/support/srv/: led.srv  speech.srv
dataset/AwA2/: classes_wn.txt
dataset/assumption_AwA2/: ASSUMPTION_README.txt  animal_description.odt  classes.txt  classes_finnish.txt  classes_wn.txt
notebooks/: CategoryAttributeLearning.ipynb
