<package format="2">
  <name>nao_interface</name>
  <version>0.0.0</version>
  <description>Nao interface for the caal  experiment</description>

  <author email="mattia.racca@aalto.fi">Mattia Racca</author>
  <maintainer email="mattia.racca@aalto.fi">Mattia Racca</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <!-- <exec_depend>support</exec_depend> -->
</package>
